--- a/src/main/java/vista/Ventana.form
+++ b/src/main/java/vista/Ventana.form
@@ -247,30 +247,21 @@
         </Component>
         <Component class="javax.swing.JTextField" name="tfIngresos">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="8" style="0"/>
-            </Property>
+            <Property name="editable" type="boolean" value="false"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tfDni">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="8" style="0"/>
-            </Property>
+            <Property name="editable" type="boolean" value="false"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tfNombre">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="8" style="0"/>
-            </Property>
+            <Property name="editable" type="boolean" value="false"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="cbTipo">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="8" style="0"/>
-            </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="2">
                 <StringItem index="0" value="FIJO"/>
@@ -287,6 +278,7 @@
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="ftfSalario">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
               <Format format="#0.00" subtype="-1" type="0"/>
             </Property>
@@ -386,6 +378,7 @@
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_DeclarationPre" type="java.lang.String" value="private EmpleadoTableModel etm;"/>
+                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="/*jTable1.getSelectionModel().addListSelectionListener(new ListSelectionListener);&#xa;    public void valueChanged(ListSelectionEvent ev){&#xa;        int fila=jTable1.getSelectedRow();&#xa;        if(fila&gt;=0){&#xa;            mostrarDni(jTable1.getValueAt(fila,0));&#xa;            mostrarNombre(jTable1.getValueAt(fila,1));&#xa;            mostrarDni(jTable1.getValueAt(fila,2));&#xa;            mostrarDni(jTable1.getValueAt(fila,3));&#xa;            mostrarDni(jTable1.getValueAt(fila,4));&#xa;            mostrarDni(jTable1.getValueAt(fila,5));&#xa;        }&#xa;}*/"/>
                 <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="etm=new EmpleadoTableModel();"/>
               </AuxValues>
             </Component>
