--- a/src/main/java/vista/DialogoEmpleado.form
+++ b/src/main/java/vista/DialogoEmpleado.form
@@ -84,7 +84,6 @@
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="sHoras" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lHoras" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -110,6 +109,9 @@
           <SpinnerModel initial="0" maximum="200" minimum="0" numberType="java.lang.Integer" stepSize="1" type="number"/>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="sHoras.setVisible(false);"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JComboBox" name="cbTipo">
       <Properties>
@@ -121,7 +123,7 @@
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbTipoActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbTipoActionPerformed,cambiarTipo"/>
       </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -151,6 +153,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="HORAS"/>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="lHoras.setVisible(false);"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JButton" name="bAceptar">
       <Properties>
