--- a/src/main/java/vista/Ventana.form
+++ b/src/main/java/vista/Ventana.form
@@ -7,11 +7,11 @@
     <Component class="javax.swing.JFileChooser" name="selectorFicheros">
       <Properties>
         <Property name="currentDirectory" type="java.io.File" editor="org.netbeans.beaninfo.editors.FileEditor">
-          <SerializedValue value="-84,-19,0,5,115,114,0,12,106,97,118,97,46,105,111,46,70,105,108,101,4,45,-92,69,14,13,-28,-1,3,0,1,76,0,4,112,97,116,104,116,0,18,76,106,97,118,97,47,108,97,110,103,47,83,116,114,105,110,103,59,120,112,116,0,114,67,58,92,85,115,101,114,115,92,100,97,119,49,46,73,83,51,49,87,88,49,49,92,68,114,111,112,98,111,120,92,68,65,84,79,83,92,80,82,79,71,82,65,77,65,67,73,79,78,92,65,99,116,105,118,105,100,97,100,101,115,92,50,84,92,85,68,48,53,65,48,53,92,65,112,112,66,97,110,99,111,92,115,114,99,92,109,97,105,110,92,106,97,118,97,92,101,115,92,115,97,117,99,101,115,92,97,112,112,98,97,110,99,111,119,2,0,92,120"/>
+          <SerializedValue value="-84,-19,0,5,115,114,0,12,106,97,118,97,46,105,111,46,70,105,108,101,4,45,-92,69,14,13,-28,-1,3,0,1,76,0,4,112,97,116,104,116,0,18,76,106,97,118,97,47,108,97,110,103,47,83,116,114,105,110,103,59,120,112,116,0,75,67,58,92,85,115,101,114,115,92,100,97,119,49,46,73,83,51,49,87,88,49,49,92,68,114,111,112,98,111,120,92,68,65,84,79,83,92,80,82,79,71,82,65,77,65,67,73,79,78,92,65,99,116,105,118,105,100,97,100,101,115,92,51,84,92,97,112,112,78,111,109,105,110,97,115,119,2,0,92,120"/>
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="selectorFicheros.setFileFilter(new FileFilter(){&#xa;public boolean accept(File f){&#xa;String n=f.getName();&#xa;boolean b=false;&#xa;if(f.isDirectory() || n.endsWith(&quot;.csv&quot;))&#xa;b=true;&#xa;return b;&#xa;}&#xa;public String getDescription(){&#xa;return &quot;Archivos (*.csv)&quot;;&#xa;}&#xa;&#xa;});"/>
+        <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="selectorFicheros.setCurrentDirectory(new File(&quot;.&quot;));&#xa;selectorFicheros.addChoosableFileFilter(new FileFilter(){&#xa;public boolean accept(File f){&#xa;String n=f.getName();&#xa;boolean b=false;&#xa;if(f.isDirectory() || n.endsWith(&quot;.csv&quot;))&#xa;b=true;&#xa;return b;&#xa;}&#xa;public String getDescription(){&#xa;return &quot;Archivos (*.csv)&quot;;&#xa;}&#xa;});&#xa;selectorFicheros.addChoosableFileFilter(new FileFilter(){&#xa;public boolean accept(File f){&#xa;String n=f.getName();&#xa;boolean b=false;&#xa;if(f.isDirectory() || n.endsWith(&quot;.json&quot;))&#xa;b=true;&#xa;return b;&#xa;}&#xa;public String getDescription(){&#xa;return &quot;Archivos (*.json)&quot;;&#xa;}&#xa;});&#xa;selectorFicheros.addChoosableFileFilter(new FileFilter(){&#xa;public boolean accept(File f){&#xa;String n=f.getName();&#xa;boolean b=false;&#xa;if(f.isDirectory() || n.endsWith(&quot;.obj&quot;))&#xa;b=true;&#xa;return b;&#xa;}&#xa;public String getDescription(){&#xa;return &quot;Archivos (*.obj)&quot;;&#xa;}&#xa;});&#xa;selectorFicheros.addChoosableFileFilter(new FileFilter(){&#xa;public boolean accept(File f){&#xa;String n=f.getName();&#xa;boolean b=false;&#xa;if(f.isDirectory() || n.endsWith(&quot;.xml&quot;))&#xa;b=true;&#xa;return b;&#xa;}&#xa;public String getDescription(){&#xa;return &quot;Archivos (*.xml)&quot;;&#xa;}&#xa;});"/>
       </AuxValues>
     </Component>
     <Menu class="javax.swing.JMenuBar" name="jMenuBar1">
@@ -29,13 +29,17 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miAbrirActionPerformed"/>
               </Events>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="miAbrir.addActionListener(new java.awt.event.ActionListener() {&#xa;    public void actionPerformed(java.awt.event.ActionEvent evt) {&#xa;        miAbrirActionPerformed(evt);&#xa;    }&#xa;});"/>
+                <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="Ventana_miAbrir"/>
               </AuxValues>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="miGuardar">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Guardar..."/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miGuardarActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -47,6 +51,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="miNuevo">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Nuevo..."/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miNuevoActionPerformed"/>
@@ -56,6 +61,33 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Buscar..."/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miBuscarActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="mUsuario">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Usuario"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="miLogin">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Iniciar sesion"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miLoginActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="miLogout">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Cerrar sesion"/>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miLogoutActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -220,6 +252,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="HORAS"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="lHoras.setVisible(false);"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JLabel" name="lIngresos">
           <Properties>
@@ -228,18 +263,17 @@
         </Component>
         <Component class="javax.swing.JButton" name="bModificar">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="8" style="0"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="MODIFCAR"/>
+            <Property name="text" type="java.lang.String" value="MODIFICAR"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bModificarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="bBorrar">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="8" style="0"/>
-            </Property>
             <Property name="text" type="java.lang.String" value="BORRAR"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bBorrarActionPerformed"/>
@@ -249,6 +283,9 @@
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfIngresosActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="tfDni">
           <Properties>
@@ -256,9 +293,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tfNombre">
-          <Properties>
-            <Property name="editable" type="boolean" value="false"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="cbTipo">
           <Properties>
@@ -270,7 +304,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbTipoActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbTipoActionPerformed,cambiarTipo"/>
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -278,7 +312,6 @@
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="ftfSalario">
           <Properties>
-            <Property name="editable" type="boolean" value="false"/>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
               <Format format="#0.00" subtype="-1" type="0"/>
             </Property>
@@ -295,6 +328,9 @@
               <SpinnerModel initial="0" maximum="200" minimum="0" numberType="java.lang.Integer" stepSize="1" type="number"/>
             </Property>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="sHoras.setVisible(false);"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
@@ -378,8 +414,9 @@
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_DeclarationPre" type="java.lang.String" value="private EmpleadoTableModel etm;"/>
-                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="/*jTable1.getSelectionModel().addListSelectionListener(new ListSelectionListener);&#xa;    public void valueChanged(ListSelectionEvent ev){&#xa;        int fila=jTable1.getSelectedRow();&#xa;        if(fila&gt;=0){&#xa;            mostrarDni(jTable1.getValueAt(fila,0));&#xa;            mostrarNombre(jTable1.getValueAt(fila,1));&#xa;            mostrarDni(jTable1.getValueAt(fila,2));&#xa;            mostrarDni(jTable1.getValueAt(fila,3));&#xa;            mostrarDni(jTable1.getValueAt(fila,4));&#xa;            mostrarDni(jTable1.getValueAt(fila,5));&#xa;        }&#xa;}*/"/>
+                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jTable1.getSelectionModel().addListSelectionListener(new ListSelectionListener(){&#xa;    public void valueChanged(ListSelectionEvent lse){&#xa;        int fila=jTable1.getSelectedRow();&#xa;        if(fila&gt;=0){&#xa;            mostrarDni((String)jTable1.getValueAt(fila,0));&#xa;            mostrarNombre((String)jTable1.getValueAt(fila,1));&#xa;            mostrarTipo((String)jTable1.getValueAt(fila,5));&#xa;            mostrarSalario((float)jTable1.getValueAt(fila,2));&#xa;            mostrarHoras((int)jTable1.getValueAt(fila,3));&#xa;            mostrarIngresos((float)jTable1.getValueAt(fila,4));&#xa;        }&#xa;    }&#xa;});"/>
                 <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="etm=new EmpleadoTableModel();"/>
+                <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="Ventana_jTable1"/>
               </AuxValues>
             </Component>
           </SubComponents>
@@ -388,14 +425,22 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="LISTADO DE EMPLEADOS"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bListadoActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JRadioButton" name="rbDni">
           <Properties>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
               <ComponentRef name="buttonGroup1"/>
             </Property>
+            <Property name="selected" type="boolean" value="true"/>
             <Property name="text" type="java.lang.String" value="DNI"/>
+            <Property name="actionCommand" type="java.lang.String" value="dni"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbDniActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JRadioButton" name="rbNombre">
           <Properties>
@@ -403,7 +448,11 @@
               <ComponentRef name="buttonGroup1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="NOMBRE"/>
+            <Property name="actionCommand" type="java.lang.String" value="nombre"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbNombreActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JRadioButton" name="rbIngresos">
           <Properties>
@@ -411,6 +460,7 @@
               <ComponentRef name="buttonGroup1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="INGRESOS"/>
+            <Property name="actionCommand" type="java.lang.String" value="ingresos"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lOrden">
